Corrected the expected 2019 so that it is on the same line as B.S. Comp Sci and aligns to the right of div.

--- a/client/src/app/education/education.component.css
+++ b/client/src/app/education/education.component.css
@@ -17,6 +17,9 @@
 
 ul.b {
     list-style-type: square;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
     
 }
 
@@ -41,4 +44,12 @@ li.d {
 
 li.e {
     padding-bottom: 10px;
+}
+
+
+.alignleft {
+	float: left;
+}
+.alignright {
+	float: right;
 }
